--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
+node_modules/
 /1Sprint
 /2Sprint
 /5Sprint
 /6Sprint
 /7Sprint
-/13Sprint
+16Sprintas/steps/mongo.txt
+13Sprintas/3.8Assignment_Conditional_Response
+13Sprintas/4.5Assignment_Create_a_Project_Translation_Library
+13Sprintas/4.6Assignment_Utilize_Overload_Function
+13Sprintas/5.3Assignment_
+13Sprintas/6.2Assignment_coffee_machine
+13Sprintas/8.5Assignment_Configure_ESLint
+13Sprintas/9.2Assignment_Project
